--- a/styleguide/scss/_config-media-breakpoints.scss
+++ b/styleguide/scss/_config-media-breakpoints.scss
@@ -2,7 +2,7 @@
 //  $CONFIG-BREAKPOINTS
 //------------------------------------//
 
-// REQUIRED: Breakpoints; uses px units. Ensure that font sizes are set 
+// REQUIRED: Breakpoints; uses px blocks. Ensure that font sizes are set 
 // for active breakpoints in the typography configuration.
 $media-breakpoints: (
 
