--- a/styleguide/scss/styleguide.scss
+++ b/styleguide/scss/styleguide.scss
@@ -3,7 +3,7 @@
  * Documented with the Nucleus style guide syntax: https://holidaypirates.github.io/nucleus/annotation-reference.html
  */
 
-// DO NOT EDIT
+// IMPORT SFUMATO
 @import "manifest";
 
 // YOUR CUSTOM PARTIALS
@@ -34,11 +34,56 @@ body {
 
         > section[separator] {
 
-            @include set-bottom-unit-padding();
+            --sf-subunit-spacing: 0;
+            --sf-zero-subunit-spacing: var(--sf-subunit-spacing);
+            --sf-phab-subunit-spacing: var(--sf-zero-subunit-spacing);
+            --sf-tabp-subunit-spacing: var(--sf-phab-subunit-spacing);
+            --sf-tabl-subunit-spacing: var(--sf-tabp-subunit-spacing);
+            --sf-note-subunit-spacing: var(--sf-tabl-subunit-spacing);
+            --sf-desk-subunit-spacing: var(--sf-note-subunit-spacing);
+            --sf-elas-subunit-spacing: var(--sf-desk-subunit-spacing);
+            --subunit-spacing: var(--sf-zero-subunit-spacing);
+
+            @include sf-media($from: phab) {
+
+                --subunit-spacing: var(--sf-phab-subunit-spacing);
+            }
+
+            @include sf-media($from: tabp) {
+
+                --subunit-spacing: var(--sf-tabp-subunit-spacing);
+            }
+
+            @include sf-media($from: tabl) {
+
+                --subunit-spacing: var(--sf-tabl-subunit-spacing);
+            }
+
+            @include sf-media($from: note) {
+
+                --subunit-spacing: var(--sf-note-subunit-spacing);
+            }
+
+            @include sf-media($from: desk) {
+
+                --subunit-spacing: var(--sf-desk-subunit-spacing);
+            }
+
+            @include sf-media($from: elas) {
+
+                --subunit-spacing: var(--sf-elas-subunit-spacing);
+            }
+
+            margin-bottom: var(--subunit-spacing);
+
+            &:last-child {
+
+                margin-bottom: 0;
+            }
         }
 
         // Primary wrapped containers with an elastic max-width
-        > [sf-unit] {
+        > [sf-block] {
 
             background-color: white;
             overflow: hidden;
@@ -48,9 +93,9 @@ body {
                 // Move mobile menu button up 
                 &:first-of-type {
 
-                    & > [sf-outer-wrapper] {
+                    & > [sf-block-lr-wrapper] {
 
-                        & > [sf-inner-wrapper] {
+                        & > [sf-block-tb-wrapper] {
 
                             padding-top: 0;
                         }
@@ -58,7 +103,7 @@ body {
                 }
             }
 
-            & + [sf-unit] {
+            & + [sf-block] {
 
                 border-top: solid 1px var(--sf-color-line);
             }
