--- a/styleguide/scss/styles/_styles-buttons.scss
+++ b/styleguide/scss/styles/_styles-buttons.scss
@@ -1,8 +1,8 @@
 /**
- * @atom Button
+ * @nuclide Button
+ *
+ * Default styles for a button.
  * @section Styles > buttons
- * @modifiers
- *  button, input[type="button"], input[type="submit"], input[type="cancel"], a[role="button"] - Default styles for a button.
  * @markup
  *  <button />
  *  <input type="button" />
