--- a/styleguide/scss/styles/_styles-typography.scss
+++ b/styleguide/scss/styles/_styles-typography.scss
@@ -11,13 +11,7 @@ a {
 h1, h2, h3, h4, h5, h6 {
 
     margin-top: 0;
-    margin-bottom: var(--headline-bottom-margin);
     font-weight: 300;
-
-    &[sf-tight] {
-
-        margin-bottom: var(--headline-bottom-margin)/3;
-    }
 
     > a {
 
@@ -28,42 +22,6 @@ h1, h2, h3, h4, h5, h6 {
 h3, h4, h5, h6 {
 
     font-weight: 400;
-}
-
-* + h1, * + h2, * + h3, * + h4, * + h5, * + h6 {
-
-    margin-top: var(--headline-top-margin-stacked);
-
-    @include sf-media($from: tabp) {
-    
-        margin-top: var(--headline-top-margin);
-    }
-}
-
-h1 + h1, h1 + h2, h1 + h3, h1 + h4, h1 + h5, h1 + h6,
-h2 + h1, h2 + h2, h2 + h3, h2 + h4, h2 + h5, h2 + h6,
-h3 + h1, h3 + h2, h3 + h3, h3 + h4, h3 + h5, h3 + h6,
-h4 + h1, h4 + h2, h4 + h3, h4 + h4, h4 + h5, h4 + h6,
-h5 + h1, h5 + h2, h5 + h3, h5 + h4, h5 + h5, h5 + h6,
-h6 + h1, h6 + h2, h6 + h3, h6 + h4, h6 + h5, h6 + h6 {
-
-    margin-top: 0;
-}
-
-p {
-
-    margin-top: 0;
-    margin-bottom: var(--paragraph-bottom-margin);
-
-    &[sf-tight] {
-
-        margin-bottom: calc(var(--paragraph-bottom-margin)/3);
-    }
-
-    &:last-child {
-
-        margin-bottom: 0;
-    }
 }
 
 blockquote {
@@ -178,9 +136,6 @@ hr {
 
 [sf-code] {
 
-    // CODE BLOCK (COLORED PANEL)
-    --border-radius: 0.15rem;
-
     position: relative;
     display: grid;
 
@@ -250,7 +205,7 @@ hr {
 
         @include sf-media($from: tabp) {
 
-            border-radius: var(--border-radius);
+            border-radius: var(--sf-border-radius);
         }
 
         overflow: scroll;
