--- a/styleguide/scss/custom/_grids.scss
+++ b/styleguide/scss/custom/_grids.scss
@@ -3,7 +3,7 @@ body {
     & > main {
 
         // Primary wrapped containers with an elastic max-width
-        > [sf-unit] {
+        > [sf-block] {
 
             article {
 
