--- a/styleguide/scss/styles/_styles-forms.scss
+++ b/styleguide/scss/styles/_styles-forms.scss
@@ -5,7 +5,6 @@
  * is required to ensure optimum display with or without those classes to better
  * address browser inconsistencies.
  */
-
 button,
 input,
 optgroup,
@@ -63,11 +62,11 @@ select[size] {
 
 [role="row"] {
 
-    margin-bottom: var(--fieldset-row-spacing);
+    margin-bottom: var(--sf-fieldset-row-spacing);
 
     &[sf-list] {
 
-        margin-bottom: var(--fieldset-row-spacing) / 2;
+        margin-bottom: var(--sf-fieldset-row-spacing) / 2;
     }
 
     &:last-of-type {
