--- a/styleguide/scss/styles/_styles-media.scss
+++ b/styleguide/scss/styles/_styles-media.scss
@@ -1,4 +1,15 @@
-// Remove gap between elements and the bottom of their containers
+/**
+ * @nuclide Remove Media Gaps
+ *
+ * Remove gap between elements and the bottom of their containers.
+ * @section Layout > Media
+ * @markup
+ *  <audio />
+ *  <canvas />
+ *  <img />
+ *  <svg />
+ *  <video />
+ */
 audio,
 canvas,
 img,
@@ -8,7 +19,16 @@ video {
   vertical-align: middle;
 }
 
-// Fluid images
+/**
+ * @nuclide Fluid Images
+ *
+ * Responsive images.
+ * @section Layout > Media
+ * @markup
+ *  <img />
+ *  <object />
+ *  <svg />
+ */
 img, object, svg {
 
   position: relative;
@@ -17,12 +37,26 @@ img, object, svg {
   -ms-interpolation-mode: bicubic;
 }
 
+/**
+ * @nuclide Auto SVG Height
+ * @section Layout > Media
+ * @markup
+ *  <svg />
+ */
 svg {
 
   height: auto;
 }
 
-// Non-fluid images if you specify `width` and/or `height` attributes
+/**
+ * @nuclide Non-fluid object images
+ * @section Layout > Media
+ * @modifiers
+ *  [width, height] - Non-fluid images if you specify `width` and/or `height` attributes.
+ * @markup
+ *  <object width="100"></object>
+ *  <img width="100"></object>
+ */
 object[width],
 object[height],
 img[width],
@@ -32,12 +66,29 @@ img[height] {
   max-width: none;
 }
 
+/**
+ * @nuclide Inline-block span images and icons
+ * @section Layout > Media
+ * @modifiers
+ *  [role="img", role="icon"] - Icons in spans use inline-block and no line height.
+ * @markup
+ *  <span role="img"></span>
+ *  <span role="icon"></span>
+ */
 span[role="img"], span[role="icon"] {
 
   display: inline-block;
   line-height: 0;
 }
 
+/**
+ * @nuclide SVG in object tag
+ * @section Layout > Media
+ * @modifiers
+ *  [type="image/svg+xml"] - Inline-block for object tag SVG images.
+ * @markup
+ *  <object type="image/svg+xml"></object>
+ */
 object[type="image/svg+xml"] {
 
   display: inline-block;
@@ -45,68 +96,99 @@ object[type="image/svg+xml"] {
   pointer-events: none;
 }
 
+/**
+ * @structure Responsive Image
+ * @section Layout > Media
+ * @modifiers
+ *  [sf-image-wrapper] - Responsive images with optional caption.
+ * @markup
+ *  <div sf-image-wrapper>
+ *    <img />
+ *    <small>Caption</small>
+ *  </div>
+ */
 [sf-image-wrapper] {
 
-  @include sf-media($upto: tabp) {
-
-    margin-left: calc(var(--block-lr-padding) * -1);
-    margin-right: calc(var(--block-lr-padding) * -1);
-
-    img {
-
-      max-width: 100vw;
-      width: 100vw;
-    }
-  }
-
-  small {
-
-    display: block;
-    margin-top: 0.75rem;
-
     @include sf-media($upto: tabp) {
-
-      margin-left: var(--block-lr-padding);
-      margin-right: var(--block-lr-padding);
+  
+        margin-left: calc(var(--block-lr-padding) * -1);
+        margin-right: calc(var(--block-lr-padding) * -1);
+      
+        img {
+    
+            max-width: 100vw;
+            width: 100vw;
+        }
     }
-  }
-}
-
-
-//-----------------------------------------------------------------------//
-// VIDEO
-//-----------------------------------------------------------------------//
-
-[sf-video-wrapper] {
-
-  @include sf-media($upto: tabp) {
-
-    margin-left: calc(var(--block-lr-padding) * -1);
-    margin-right: calc(var(--block-lr-padding) * -1);
-  }
-
-  [role="video"], video {
-
-    background-color: var(--sf-color-light);
 
     @include sf-media($from: tabp) {
 
-      border-radius: 0.25rem;
-      overflow: hidden;
+        img {
+      
+            border-radius: 0.25rem;
+            overflow: hidden;
+        }
+    }  
+
+    small {
+  
+        display: block;
+        margin-top: 0.75rem;
+    
+        @include sf-media($upto: tabp) {
+    
+            margin-left: var(--block-lr-padding);
+            margin-right: var(--block-lr-padding);
+        }
     }
+}
 
-    @include sf-video-container;
-  }
 
-  small {
-
-    display: block;
-    margin-top: 0.75rem;
+/**
+ * @structure Responsive Video
+ * @section Layout > Media
+ * @modifiers
+ *  [sf-video-wrapper, role="video"] - Responsive video with optional caption.
+ * @markup
+ *  <div sf-video-wrapper>
+ *    <video />
+ *    <small>Caption</small>
+ *  </div>
+ *  <div sf-video-wrapper>
+ *    <div role="video" />
+ *    <small>Caption</small>
+ *  </div>
+ */
+[sf-video-wrapper] {
 
     @include sf-media($upto: tabp) {
-
-      margin-left: var(--block-lr-padding);
-      margin-right: var(--block-lr-padding);
+  
+        margin-left: calc(var(--block-lr-padding) * -1);
+        margin-right: calc(var(--block-lr-padding) * -1);
     }
-  }
+  
+    [role="video"], video {
+  
+        background-color: var(--sf-color-light);
+    
+        @include sf-media($from: tabp) {
+    
+            border-radius: 0.25rem;
+            overflow: hidden;
+        }
+    
+        @include sf-video-container;
+    }
+  
+    small {
+  
+        display: block;
+        margin-top: 0.75rem;
+    
+        @include sf-media($upto: tabp) {
+    
+            margin-left: var(--block-lr-padding);
+            margin-right: var(--block-lr-padding);
+        }
+    }
 }
