--- a/styleguide/scss/custom/_layout-header.scss
+++ b/styleguide/scss/custom/_layout-header.scss
@@ -6,6 +6,9 @@ body {
 
     & > header {
 
+        background-color: var(--sf-color-light);
+        color: var(--sf-color-light-contrast);
+        
         &[sf-block] {
 
             & > [sf-block-lr-wrapper] {
