--- a/styleguide/scss/styles/_styles-typography.scss
+++ b/styleguide/scss/styles/_styles-typography.scss
@@ -262,10 +262,10 @@ hr {
 
 [sf-code] + p {
 
-    margin-top: var(--paragraph-bottom-margin);
+    margin-top: 1.5rem;
 
     &[sf-tight] {
 
-        margin-top: var(--paragraph-bottom-margin)/3;
+        margin-top: 0.5rem;
     }
 }
